[package]
name = "rust_ishell"
version = "0.1.0"
authors = ["senbiki akifumi <akifumi.senbiki.1209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "*"
tempfile = "*"
tempdir = "*"
cstr_core = "*"
libc = "0.2.71"
printf = "*"
printf-rs = "*"

[profile.release]
opt-level = 3